--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="container">
+    <div class="form-container my-5">
+        <app-form></app-form>
+    </div>
+</div>
