form and service

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,12 +1,12 @@
 <form (submit)="formSubmit()" class="d-flex flex-column align-items-center">
     <div class="d-flex searchContainer">
-        <input type="text" [(ngModel)]="searchQuery" name="searchQuery"
+        <input type="text" [(ngModel)]="data.query" name="searchQuery"
             class="form-control bg-dark text-white mb-4 rounded-end-0 shadow-none" id="floatingInput"
             placeholder="The Expanse">
         <div ngbDropdown class="d-inline-block">
             <button type="button" class="btn btn-dark text-secondary rounded-start-0" id="dropdownSearch"
                 ngbDropdownToggle>
-                {{ btnSearchParam }}
+                {{ data.param }}
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdownSearch" class="bg-dark border-1 border-primary">
                 <button ngbDropdownItem class="text-secondary" (click)="setSearchFilter(1)">Everything</button>
