--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,9 @@
     <div class="form-container my-5">
         <app-form (onSubmit)="doSearch($event)"></app-form>
     </div>
-    <div *ngFor="let b of bookArr" class="my-2">
-        <p class="m-0">{{ b.volumeInfo.title }}</p>
+</div>
+<div class="container-fluid container-md">
+    <div *ngFor="let b of bookArr" class="my-3">
+        <app-card [book]="b" (onClick)="goToDetails(b)"></app-card>
     </div>
 </div>
