--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,26 +1,22 @@
-.card {
-  transition: transform 0.5s;
+.back-to-top {
+  cursor: pointer;
+  position: fixed;
+  bottom: 5%;
+  right: 2%;
+  width: 60px;
+  height: 60px;
+  border-radius: 100%;
+  border: 1px solid var(--bs-gray-700);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s;
+
+  svg {
+    fill: var(--violet);
+  }
+
   &:hover {
-    transform: scale(1.05);
-  }
-
-  .secondary-info {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
-  }
-
-  .btn-more {
-    button {
-      border: 1px solid var(--violet) !important;
-      color: var(--violet) !important;
-
-      &:hover {
-        color: white !important;
-        border: 1px solid var(--bs-blue) !important;
-      }
-    }
+    background-color: var(--bs-gray-800);
   }
 }
