home and form ok

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -8,6 +8,11 @@
     cursor: default;
   }
 
+  img {
+    max-width: 130px;
+    max-height: 198px;
+  }
+
   .secondary-info {
     overflow: hidden;
     display: -webkit-box;
