--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
                     code</a>
             </div>
             <div class="d-none d-md-flex nav-misc align-items-center">
-                <p class="m-0">Made with Angular!</p>
+                <p class="m-0" id="mwa">Made with Angular!</p>
             </div>
         </nav>
     </div>
