--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,6 +1,6 @@
 <form (submit)="formSubmit()" class="d-flex flex-column align-items-center">
     <div class="d-flex searchContainer mt-3">
-        <input type="text" [(ngModel)]="data.query" name="searchQuery"
+        <input type="text" [(ngModel)]="formData.query" name="searchQuery"
             class="form-control bg-dark mb-4 rounded-end-0 shadow-none" id="floatingInput" placeholder="The Expanse">
         <div ngbDropdown class="d-inline-block">
             <button type="button" class="btn btn-dark text-secondary rounded-start-0" id="dropdownSearch"
