--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,8 +1,8 @@
-.back-to-top {
-  cursor: pointer;
+.back-to-top,
+.back-to-bottom {
   position: fixed;
-  bottom: 5%;
-  right: 2%;
+  right: 0;
+  cursor: pointer;
   width: 60px;
   height: 60px;
   border-radius: 100%;
@@ -11,12 +11,47 @@
   justify-content: center;
   align-items: center;
   transition: all 0.3s;
-
   svg {
     fill: var(--violet);
   }
 
   &:hover {
     background-color: var(--bs-gray-800);
+  }
+}
+
+.back-to-top {
+  bottom: 9%;
+}
+
+.back-to-bottom {
+  bottom: 20%;
+}
+
+.books-container {
+  button {
+    .spinner {
+      width: 20px;
+      height: 20px;
+    }
+    .spinner::after {
+      content: "";
+      display: block;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      border: 3px solid var(--bs-dark);
+      border-color: #fff transparent #fff transparent;
+      animation: rotate 1s linear infinite;
+    }
+
+    @keyframes rotate {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
   }
 }
