--- a/src/app/pages/book/book.component.html
+++ b/src/app/pages/book/book.component.html
@@ -1,1 +1,38 @@
-<p>book works!</p>
+<div class="d-flex h-100">
+    <div *ngIf="isLoading || isWaiting" class="d-flex align-items-center justify-content-center flex-grow-1">
+        <app-loader></app-loader>
+    </div>
+    <div *ngIf="!isLoading && !isWaiting" class="d-flex flex-grow-1 justify-content-center align-items-center py-4">
+        <div class="card bg-dark p-4 shadow-lg">
+            <div class="d-flex">
+                <img
+                    [src]="book.volumeInfo!.imageLinks ? book.volumeInfo!.imageLinks.thumbnail : './assets/img-fallback.jpg'">
+                <div class="main-info ms-3">
+                    <h4 class="m-0 mb-2">{{ book.volumeInfo!.title }}</h4>
+                    <p *ngIf="book.volumeInfo!.authors" class="m-0">By <span
+                            *ngFor="let a of book.volumeInfo!.authors">• {{
+                            a }} •</span></p>
+                    <p *ngIf="!book.volumeInfo!.authors" class="m-0">• Unknown •</p>
+                    <p class="m-0 mt-3"><span
+                            [textContent]="book.volumeInfo!.publisher ? book.volumeInfo!.publisher + ' • ' : 'Unknown Publisher' + ' • '"></span>
+                        <span
+                            [textContent]="book.volumeInfo!.publishedDate ? book.volumeInfo!.publishedDate : 'Unknown Date'"></span>
+                    </p>
+                    <p class="m-0 mt-2"
+                        [textContent]="book.volumeInfo!.pageCount ? 'Pages count: ' + book.volumeInfo!.pageCount : 'Pages count: Unknown'">
+                    </p>
+                    <p class="m-0 mt-2"
+                        [textContent]="book.volumeInfo!.language ? book.volumeInfo!.language == 'en' ? 'Language: English' : book.volumeInfo!.language == 'it' ? 'Language: Italiano' : book.volumeInfo!.language : 'Language: Unknown'">
+                    </p>
+                </div>
+            </div>
+            <div class="mt-3"
+                [innerHTML]="book.volumeInfo!.description ? book.volumeInfo!.description : 'No description available.. This is bad...'">
+            </div>
+            <div *ngIf="book.volumeInfo!.previewLink" class="mt-3 text-center">
+                <a href="{{ book.volumeInfo!.previewLink }}"><button class="btn btn-outline-primary w-25"
+                        [textContent]="'Get a Preview'"></button></a>
+            </div>
+        </div>
+    </div>
+</div>
