--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,15 +1,15 @@
 <div class="card bg-dark shadow-lg">
-    <div class="d-flex p-2 w-100">
-        <div class="px-2 w-auto">
+    <div class="d-flex p-3 w-100">
+        <div class="px-2 w-auto d-flex">
             <img [src]="book.volumeInfo!.imageLinks ? book.volumeInfo!.imageLinks.thumbnail : './assets/img-fallback.jpg'"
-                class="shadow">
+                class="shadow align-self-center">
         </div>
         <div class="d-flex flex-column ps-3 pe-1 justify-content-between w-100">
             <div class="main-info">
                 <h5 class="m-0">{{ book.volumeInfo!.title }}</h5>
                 <p *ngIf="book.volumeInfo!.authors" class="m-0">By <span *ngFor="let a of book.volumeInfo!.authors">• {{
-                        a }} •</span></p>
-                <p *ngIf="!book.volumeInfo!.authors" class="m-0">• Unknown •</p>
+                        a }} • </span></p>
+                <p *ngIf="!book.volumeInfo!.authors">• Unknown •</p>
             </div>
             <div class="secondary-info my-1">
                 <p class="m-0"
