--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,5 +1,5 @@
-<div class="card bg-dark shadow-lg">
-    <div class="d-flex p-3 w-100">
+<div class="card bg-dark shadow-lg h-100">
+    <div class="d-flex p-3 w-100 h-100">
         <div class="px-2 w-auto d-flex">
             <img [src]="book.volumeInfo!.imageLinks ? book.volumeInfo!.imageLinks.thumbnail : './assets/img-fallback.jpg'"
                 class="shadow align-self-center">
