--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -17,5 +17,5 @@
             </div>
         </div>
     </div>
-    <button type="submit" class="btn btn-outline-primary w-25 rounded-3">Search</button>
+    <button type="submit" class="btn btn-outline-primary c-width rounded-3">Search</button>
 </form>
