--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,28 +1,45 @@
 <div class="h-100 d-flex flex-column py-4">
     <div class="container">
-        <div class="form-container mb-4">
+        <div class="form-container mb-4" [class.form-disabled]="isWaiting || isLoading">
             <app-form (onSubmit)="doSearch($event, true)"></app-form>
         </div>
     </div>
-    <div *ngIf="!isLoading && !isWaiting" class="container-fluid container-md books-container">
+    <div *ngIf="!isLoading && !isWaiting && !bookArr.length && !isError && !isSearchError"
+        class="container-fluid flex-grow-1 project-info">
+        <h1 class="m-0 mt-5 pb-1 mb-3">&nbsp; Open Book Project</h1>
+        <div class="px-2 px-md-4">
+            <p class="m-0 text-parag">Open Book is a little and simple project made with Angular.</p>
+            <p class="mt-2 mb-0 text-parag">You can find examples on how to use the http module to send a GET request to
+                an API.</p>
+            <p class="mt-1 text-parag">To get infos about any book i am using Google Books API.</p>
+            <p class="mt-3 text-parag">Other useful examples are the Input / Output features to pass variables through
+                different components, the book infos page which is a lazy-loaded module with its own properties, and
+                various HTML checks with the *ngIf directive to display elements based on the situation.</p>
+            <p class="mt-3 text-parag">The node_modules folder isn't clearly inside the repo, so if you want to run
+                locally this project you'll need to run the <span class="code-tag px-1 pb-1 rounded-2">npm i</span>
+                command to get all the dependencies.</p>
+        </div>
+    </div>
+    <div *ngIf="!isLoading && !isWaiting && bookArr.length" class="container-fluid container-md books-container">
+        <div class="d-flex justify-content-center mt-1 mb-5">
+            <button class="btn rounded-3 clear-btn" (click)="clearResults()">Clear Results</button>
+        </div>
         <div *ngFor="let b of bookArr" class="my-3">
             <app-card [book]="b" (onClick)="goToDetail(b)" class="d-block"></app-card>
         </div>
-        <div *ngIf="bookArr.length">
-            <div class="back-to-top" (click)="toTop()">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-                    class="bi bi-arrow-up" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                        d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
-                </svg>
-            </div>
-            <div class="back-to-bottom" (click)="toBottom()">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-                    class="bi bi-arrow-down" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                        d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
-                </svg>
-            </div>
+        <div class="back-to-top" (click)="toTop()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-arrow-up"
+                viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+            </svg>
+        </div>
+        <div class="back-to-bottom" (click)="toBottom()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-arrow-down"
+                viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+            </svg>
         </div>
         <div *ngIf="isFirstReqDone && !isWaiting && !isLoading" class="d-flex flex-column align-items-center">
             <button #loadMore class="btn btn-outline-primary w-50 my-3 d-flex justify-content-center align-items-center"
