--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -17,7 +17,7 @@
                 </p>
             </div>
             <div class="btn-more">
-                <button class="btn btn-outline-primary px-5 rounded-4" (click)="btnClick()">More Info</button>
+                <button class="btn btn-outline-primary px-3 px-md-5 rounded-4" (click)="btnClick()">More Info</button>
             </div>
         </div>
     </div>
