--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="border-top border-primary py-3">
     <div class="container">
         <div class="d-flex justify-content-between">
-            <p class="m-0">{{ year }} Mar.LizZo</p>
+            <p class="m-0 text-parag">{{ year }} Mar.LizZo</p>
             <p class="m-0"><a href="https://www.flaticon.com/free-icons/open-book" title="open book icons"
                     class="text-decoration-none link-primary">Book icon by
                     Karyative</a></p>
