--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -21,4 +21,5 @@
             </div>
         </div>
     </div>
+    <!-- As in the book component, we check for every property. If undefined or null, we set a fallback string with the ternary operator. In the end the button to trigger the EventEmitter -->
 </div>
